# gym-tracker

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.css
assets/: tailwind.css
assets/styling/: main.css
migrations/: 0001_create_exercises.sql  0002_create_workout_sessions.sql  0003_create_exercise_logs.sql  0004_create_cardio_logs.sql  0005_remove_sets_count.sql  0006_add_cardio_detail_fields.sql  0007_workout_templates.sql  0008_template_completions.sql  0009_body_weight_logs.sql
src/: main.rs
src/db/: bodyweight.rs  cardio.rs  exercises.rs  export.rs  history.rs  mod.rs  templates.rs
src/views/: bodyweight.rs  format.rs  history.rs  home.rs  log_cardio.rs  log_exercise.rs  manage_templates.rs  mod.rs  navbar.rs  progress.rs  records.rs  start_workout.rs
